Fixed gradient in course section and managed gapping in hero section

--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,10 @@
   background: var(--bg-gradient-footer);
 }
 
+.bg-gradient-course {
+  background: var(--bg-gradient-course);
+}
+
 .bg-gradient-profile-picture {
   background: var(--bg-gradient-profile-picture);
 }
